Update formatting